ChangeLog (20260308-1856): Backend: 1)  Rename maxbook to maxbookperinterval for readability 2) Implemented endpoind getInvitationByTokenV1 3) refactor InvitationResponseDto, change List<String>slotNames to List<SlotResponseDto> slotList
Frontend:
4) implement returnurl when invitation access code is submitted by user, returnurl is passed to log in page and also registration page
5) refactor coding to suit the changes of InvitationResponseDto